# Aesthetic-evaluation

./: README.md  eval_text_stats.py  eval_text_stats_top3.py  requirements-common.txt  run.py  美学模型接入说明与TODO.md
aesthetic_eval_score_framework/: .env.example  .gitignore  README.md  TODO.md  TODO_MONITOR.md  pyproject.toml  requirements-common.txt  requirements-llava37.txt  requirements-onevision.txt  requirements-qwen-internvl.txt  requirements.txt  run.py
aesthetic_eval_score_framework/configs/: base_score.yaml  base_score_smoke_gpu3.yaml
aesthetic_eval_score_framework/data/: ava_smoke_64.jsonl
aesthetic_eval_score_framework/docs/: EXTERNAL_DEPENDENCIES.md  OPEN_SOURCE_CHECKLIST.md  RELEASE_AUDIT.md
aesthetic_eval_score_framework/envs/: README.md
aesthetic_eval_score_framework/scripts/: run_infer_artimuse_score.sh
aesthetic_eval_score_framework/src/aesthetic_score_eval/: config.py  data.py  inference.py  metrics.py  report.py
aesthetic_eval_score_framework/src/aesthetic_score_eval/adapters/: __init__.py  aesexpert.py  artimuse.py  artquant.py  base.py  internvl_prompt.py  llava_onevision_prompt.py  prompt_numeric.py  qalign.py  qsit.py  qwen3vl_prompt.py  score_parse.py  unipercept.py
configs/: base.yaml  base_smoke.yaml  base_unipercept_perf.yaml
scripts/: env_snapshot_and_cleanup.sh  run_eval.sh  run_infer_aesexpert.sh  run_infer_artimuse.sh  run_infer_artquant.sh  run_infer_internvl.sh  run_infer_llava.sh  run_infer_onealign.sh  run_infer_qsit.sh  run_infer_qwen.sh  run_infer_qwen_lora_ft.sh  run_infer_uniaa.sh  run_infer_unipercept.sh  (+1 more)
(+53 files in other folders)
