[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aesthetic-eval-score-framework"
version = "0.1.0"
description = "Unified MLLM aesthetic score evaluation toolbox."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "Pillow>=10.0",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "scipy>=1.11",
  "packaging>=23.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
